# libBLS

./: .clang-format  .codacy.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  Readme.md  SECURITY.md  codecov.yml  get_code_cov  libBLS.cbp  libBLS.h
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_Report.md  Feature_Request.md  Question.md
.github/workflows/: cla.yml  clang-format-check.yml  nightly.yml  publish.yml  test.yml
bls/: BLSPrivateKey.cpp  BLSPrivateKey.h  BLSPrivateKeyShare.cpp  BLSPrivateKeyShare.h  BLSPublicKey.cpp  BLSPublicKey.h  BLSPublicKeyShare.cpp  BLSPublicKeyShare.h  BLSSigShare.cpp  BLSSigShare.h  BLSSigShareSet.cpp  BLSSigShareSet.h  BLSSignature.cpp  BLSSignature.h  BLSutils.cpp  BLSutils.h  bls.cpp  bls.h
cmake/: BlsFindClangFormat.cmake  FindClangFormat.cmake  bls-clang-format.cmake  clang-format.cmake
dkg/: DKGBLSSecret.cpp  DKGBLSSecret.h  DKGBLSWrapper.cpp  DKGBLSWrapper.h  DKGTESecret.cpp  DKGTESecret.h  DKGTEWrapper.cpp  DKGTEWrapper.h  dkg.cpp  dkg.h  dkg_te.cpp  dkg_te.h
docs/: README.md  testing.md  using-distributed-key-generation.md  using-threshold-encryption.md  using-threshold-signatures.md
node/: encrypt.js  encrypt.wasm  encryptTransaction.html  encryptTransaction.js  encryptTransaction.min.js  package-lock.json  package.json  webpack.config.js
python/: dkgpython.cpp  setup.py  setup.sh  test.py  test.sh
scripts/: build_with_emscripten.sh  calculate_version.sh  create_malicious_parameters.sage  parameters.json  run_sgx_simulator.sh  run_tools_test.sh
test/: decryptMessage.cpp  dkg_attack.cpp  encryptMessageJS.cpp  generateBLSKeys.cpp  te_sample_sgx.cpp  test_TE_wrappers.cpp  test_bls.cpp  unit_tests_bls.cpp  unit_tests_dkg.cpp  unit_tests_dkg.cpp.orig  unit_tests_dkg_te.cpp  unit_tests_te.cpp  unit_tests_utils.cpp
threshold_encryption/: CMakeLists.txt  TEDataSingleton.cpp  TEDataSingleton.h  TEDecryptSet.cpp  TEDecryptSet.h  TEPrivateKey.cpp  TEPrivateKey.h  TEPrivateKeyShare.cpp  TEPrivateKeyShare.h  TEPublicKey.cpp  TEPublicKey.h  TEPublicKeyShare.cpp  TEPublicKeyShare.h  decryptMessage.cpp  encryptMessage.cpp  threshold_encryption.cpp  threshold_encryption.h  unit_tests_te.cpp  utils.cpp  utils.h
threshold_encryption/pbc-0.5.14/: ChangeLog  configure
threshold_encryption/pbc-0.5.14/arith/: field.c
tools/: README.md  bls_glue.cpp  bls_keygen.cpp  decryptMessage.cpp  decrypt_message  dkg_glue.cpp  dkg_key_gen.cpp  generateBLSKeys.cpp  generate_bls_keys  generate_key_system.cpp  hash_g1.cpp  run_examples.sh  sign_bls.cpp  utils.cpp  utils.h  verify_bls.cpp
